--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <h1>Hello, I'm <span>Mariya P Alex</span></h1>
-            <h2 class="subtitle">A Proud Woman from Dubai</h2>
+            <h2 class="subtitle">A moonji thettiya Woman from Dubai</h2>
         </div>
     </header>
 
